--- a/OfferCity/CustomInfoWindow.xib
+++ b/OfferCity/CustomInfoWindow.xib
@@ -12,24 +12,24 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CustomInfoWindow" customModule="OfferCity" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="300" height="120"/>
+            <rect key="frame" x="0.0" y="0.0" width="370" height="120"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XgD-nI-6AN">
-                    <rect key="frame" x="155" y="10" width="140" height="17"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XgD-nI-6AN">
+                    <rect key="frame" x="160" y="10" width="205" height="17"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WWi-cL-Q85">
-                    <rect key="frame" x="5" y="10" width="130" height="100"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WWi-cL-Q85" customClass="ImageCustomWindow" customModule="OfferCity" customModuleProvider="target">
+                    <rect key="frame" x="10" y="12.5" width="130" height="95"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="100" id="DTk-Lq-8uj"/>
+                        <constraint firstAttribute="height" constant="95" id="DTk-Lq-8uj"/>
                         <constraint firstAttribute="width" constant="130" id="wck-I7-lTF"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zC3-MN-3mY">
-                    <rect key="frame" x="155" y="37" width="140" height="14.5"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zC3-MN-3mY">
+                    <rect key="frame" x="160" y="35" width="205" height="14.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -40,9 +40,9 @@
                 <constraint firstItem="WWi-cL-Q85" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="0UE-Wm-w78"/>
                 <constraint firstItem="XgD-nI-6AN" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="23d-6A-mbO"/>
                 <constraint firstItem="XgD-nI-6AN" firstAttribute="leading" secondItem="WWi-cL-Q85" secondAttribute="trailing" constant="20" id="4iW-8v-G7m"/>
-                <constraint firstItem="WWi-cL-Q85" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="5" id="CBb-iE-6AG"/>
+                <constraint firstItem="WWi-cL-Q85" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="CBb-iE-6AG"/>
                 <constraint firstItem="zC3-MN-3mY" firstAttribute="leading" secondItem="WWi-cL-Q85" secondAttribute="trailing" constant="20" id="T6J-BM-F2Z"/>
-                <constraint firstItem="zC3-MN-3mY" firstAttribute="top" secondItem="XgD-nI-6AN" secondAttribute="bottom" constant="10" id="hrK-zq-TV4"/>
+                <constraint firstItem="zC3-MN-3mY" firstAttribute="top" secondItem="XgD-nI-6AN" secondAttribute="bottom" constant="8" id="hrK-zq-TV4"/>
                 <constraint firstAttribute="trailing" secondItem="zC3-MN-3mY" secondAttribute="trailing" constant="5" id="uuO-0E-ykB"/>
                 <constraint firstAttribute="trailing" secondItem="XgD-nI-6AN" secondAttribute="trailing" constant="5" id="w6B-uw-5xT"/>
             </constraints>
